--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "coffee-script": "^1.10.0",
     "gulp": "^3.9.0",
     "gulp-connect": "^2.2.0",
+    "gulp-sass": "^2.1.0",
     "panini": "^0.1.0"
   }
 }
