--- a/package.json
+++ b/package.json
@@ -10,11 +10,20 @@
   "license": "MIT",
   "dependencies": {
     "coffee-script": "^1.10.0",
+    "del": "^2.0.2",
     "gulp": "^3.9.0",
     "gulp-coffee": "^2.3.1",
     "gulp-concat": "^2.6.0",
     "gulp-connect": "^2.2.0",
+    "gulp-hb": "^2.6.5",
+    "gulp-layout": "0.0.3",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.1.0",
-    "panini": "^0.1.0"
+    "handlebars": "^4.0.4",
+    "panini": "^0.1.0",
+    "underscore.string": "^3.2.2"
+  },
+  "devDependencies": {
+    "grunt": "^0.4.5"
   }
 }
