--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "gulp-coffee": "^2.3.1",
     "gulp-concat": "^2.6.0",
     "gulp-connect": "^2.2.0",
+    "gulp-front-matter": "^1.3.0",
     "gulp-hb": "^2.6.5",
     "gulp-layout": "0.0.3",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.1.0",
     "handlebars": "^4.0.4",
     "panini": "^0.1.0",
+    "underscore": "^1.8.3",
     "underscore.string": "^3.2.2"
   },
   "devDependencies": {
