--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.1.0",
     "handlebars": "^4.0.4",
+    "handlebars-registrar": "^1.5.2",
     "panini": "^0.1.0",
+    "template-helpers": "^0.3.4",
     "underscore": "^1.8.3",
     "underscore.string": "^3.2.2"
   },
