--- a/source/data/credits.yml
+++ b/source/data/credits.yml
@@ -6,3 +6,4 @@ SASS: 'http://sass-lang.com'
 CoffeeScript: 'http://jashkenas.github.com/coffee-script'
 HTML5: 'http://html5.org'
 Bower: 'http://bower.io'
+Handlebars: 'http://handlebarsjs.com/'
