--- a/package.json
+++ b/package.json
@@ -9,25 +9,27 @@
   "author": "Abhra Basak",
   "license": "MIT",
   "dependencies": {
-    "coffee-script": "^1.10.0",
-    "del": "^2.0.2",
-    "gulp": "^3.9.0",
-    "gulp-coffee": "^2.3.1",
-    "gulp-concat": "^2.6.0",
-    "gulp-connect": "^2.2.0",
+    "coffeescript": "^2.7.0",
+    "del": "^8.0.0",
+    "gulp": "^5.0.0",
+    "gulp-coffee": "^3.0.3",
+    "gulp-concat": "^2.6.1",
+    "gulp-connect": "^5.7.0",
     "gulp-front-matter": "^1.3.0",
-    "gulp-hb": "^2.6.5",
-    "gulp-layout": "0.0.3",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.1.0",
-    "handlebars": "^4.0.4",
-    "handlebars-registrar": "^1.5.2",
-    "panini": "^0.1.0",
-    "template-helpers": "^0.3.4",
-    "underscore": "^1.8.3",
-    "underscore.string": "^3.2.2"
+    "gulp-hb": "^8.0.0",
+    "gulp-layout": "0.0.4",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^6.0.0",
+    "handlebars": "^4.7.8",
+    "handlebars-helpers": "^0.10.0",
+    "panini": "^1.7.2",
+    "sass": "^1.83.4",
+    "template-helpers": "^1.0.1",
+    "underscore": "^1.13.7",
+    "underscore.string": "^3.3.6"
   },
   "devDependencies": {
+    "bower": "^1.8.14",
     "grunt": "^0.4.5"
   }
 }
